Pass in filter's name when adding to MockMvc
Closes gh-38001